Mon Oct  3 19:17:31 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:53:17 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change

Thu Sep 15 11:34:46 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Moved CONFIG_RULES before AC_HAVE_LIBRARY() rules,
		so that they work. 

Thu Aug 18 16:15:36 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Added missing $(LIBS) to link line.

Thu Aug 18 13:43:07 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* mailquery.c: Move usage() before main() to solve redeclaration
	error.

	* mailquery.c: Add #include <string.h> to fix compiler kvetching.

Tue Aug  9 16:45:53 1994  Tom Yu  (tlyu@dragons-lair)

	* poplib.c: fix stupid sterror bug

	* Makefile.in:
	* configure.in: make install fixes

	* poplib.c: Ultrix cpp doesn't like '#error'

	* Makefile.in: oops forgot about $(COMERRLIB)
