@@ -1,3 +1,8 @@
+Wed Nov  2 21:08:04 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* poplib.c (getline, multiline): NULL should not be used as a
+		character assignment value.  Use '\0' instead.
+
 Mon Oct  3 19:17:31 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* Makefile.in: Use $(srcdir) to find manual page for make install.
